--- a/projektScrapper/package.json
+++ b/projektScrapper/package.json
@@ -3,12 +3,12 @@
   "lockfileVersion": 1,
   "dependencies": {
     "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "xhr2": "^0.2.1"
   },
   "name": "projektscrapper",
   "version": "1.0.0",
   "main": "projektScrapper.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
