--- a/projektUI/projekt-ui/package.json
+++ b/projektUI/projekt-ui/package.json
@@ -9,20 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "autoprefixer": "^10.4.7",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
     "leaflet": "^1.8.0",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "leaflet-geosearch": "^3.6.0",
+    "mdbreact": "^5.2.0",
     "next": "^12.1.6",
+    "next-compose-plugins": "^2.2.1",
+    "next-fonts": "^1.5.1",
+    "next-images": "^1.8.4",
+    "postcss": "^8.4.14",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-leaflet": "^4.0.0",
-    "reactstrap": "^9.0.2"
+    "react-router-dom": "^6.3.0",
+    "reactstrap": "^9.0.2",
+    "styled-components": "^5.3.5",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "babel-plugin-styled-components": "^2.0.7"
   }
 }
