--- a/projektUI/projekt-ui/package.json
+++ b/projektUI/projekt-ui/package.json
@@ -23,6 +23,7 @@
     "next-images": "^1.8.4",
     "postcss": "^8.4.14",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
